Refactor: DAO level. Add connection pool, modify ContexListener